--- a/src/components/skateboard/Skateboard.css
+++ b/src/components/skateboard/Skateboard.css
@@ -7,8 +7,9 @@
   
 .skateboard {
     flex-basis: 28%;
-    margin: 1em;
+    margin: 2em;
     padding: 1em;
-    border: 1px solid goldenrod;
+    border: 2px solid goldenrod;
+    border-radius: 15px;
 }
   
